@@ -1,6 +1,0 @@
-Handles the installing and uninstalling of perl modules, scripts,
-man pages, etc...
-
-Both install() and uninstall() are specific to the way ExtUtils::MakeMaker
-handles the installation and deinstallation of perl modules. They
-are not designed as general purpose tools.
